logic completed + api
