# routes/user.js
@@ -3,6 +3,34 @@ var router = express.Router();
 const DButils = require("./utils/DButils");
 const user_utils = require("./utils/user_utils");
 const recipe_utils = require("./utils/recipes_utils");
+const multer = require('multer');
+
+
+const storage = multer.diskStorage({
+  destination: function (req, file, cb) {
+    cb(null, './images/');
+  },
+  filename: function (req, file, cb) {
+    cb(null, new Date().toISOString().replace(/:/g, '-') + file.originalname);
+  }
+});
+
+const fileFilter = (req, file, cb) => {
+  if (file.mimetype === "image/jpeg" || file.mimetype === "image/png" || file.mimetype === "image/jpg") {
+    cb(null, true);
+  } else {
+    cb(null, false);
+  }
+};
+
+const upload = multer({
+  storage: storage,
+  limits: {
+    fileSize: 1024 * 1024 * 5
+  },
+  fileFilter: fileFilter
+});
+
 
 /**
  * Authenticate all incoming requests by middleware
@@ -29,11 +57,11 @@ router.post('/favorites', async (req, res, next) => {
     const user_name = req.session.user_name;
     const recipe_id = req.body.recipe_id;
     await user_utils.markAsFavorite(user_name, recipe_id);
-    res.status(200).send("The Recipe successfully saved as favorite");
+    res.status(201).send("The Recipe successfully saved as favorite");
   } catch (error) {
     next(error);
   }
-})
+});
 
 /**
  * This path returns the favorites recipes that were saved by the logged-in user
@@ -61,7 +89,7 @@ router.get('/last_watched', async (req, res, next) => {
   } catch (error) {
     next(error);
   }
-})
+});
 
 router.get('/my_recipes', async (req, res, next) => {
   try {
@@ -71,30 +99,33 @@ router.get('/my_recipes', async (req, res, next) => {
   } catch (error) {
     next(error);
   }
-})
+});
 
-router.post('/add_recipe', async (req, res, next) => {
+router.post('/add_recipe', upload.single("image"), async (req, res, next) => {
   try {
-    const user_name = req.session.user_name;
-    let recipe_details = {
-      title: req.body.title,
-      readyInMinutes: req.body.readyInMinutes,
-      image: req.body.image,
-      popularity: 0,
-      vegan: req.body.vegan,
-      vegetarian: req.body.vegetarian,
-      glutenFree: req.body.glutenFree,
-      ingredients: req.body.ingredients.list,
-      instructions: req.body.instructions,
-      servings: req.body.servings
+    try {
+      const user_name = req.session.user_name;
+      let recipe_details = {
+        title: req.body.title,
+        readyInMinutes: req.body.readyInMinutes,
+        image: req.file.path,
+        popularity: 0,
+        vegan: req.body.vegan,
+        vegetarian: req.body.vegetarian,
+        glutenFree: req.body.glutenFree,
+        ingredients: req.body.ingredients,
+        instructions: req.body.instructions,
+        servings: req.body.servings
+      }
+    } catch (error) {
+      res.status(400).send("parameters are wrong");
     }
     await user_utils.addRecipeToDb(user_name, recipe_details);
-    res.status(200).send("The Recipe successfully saved to storage");
+    res.status(201).send("The Recipe successfully saved to storage");
   } catch (error) {
-    next(error);
+    next(error)
   }
-})
-
+});
 
 
 module.exports = router;
